# fedimint-walletv2-recoverytool

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  style.css
.github/workflows/: deploy.yml
src/: lib.rs  state.rs  wallet.rs
src/components/: destination.rs  key_input.rs  mod.rs  network_select.rs  step_indicator.rs  success.rs  wallet_sync.rs
