[package]
authors = ["The Fedimint Developers"]
description = "Web-based WASM tool for recovering funds from a walletv2 federation multisig"
edition = "2024"
license = "MIT"
name = "fedimint-walletv2-recoverytool"
readme = "README.md"
repository = "https://github.com/fedimint/fedimint-walletv2-recoverytool"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "fedimint_walletv2_recoverytool"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
bdk_esplora = { version = "0.22.1", default-features = false, features = ["async"] }
bdk_wallet = "2.3.0"
bitcoin = { version = "0.32.6", features = ["serde"] }
console_error_panic_hook = "0.1.7"
esplora-client = { version = "0.12.2", default-features = false, features = [
    "async",
    "async-https-rustls",
] }
getrandom_0_2 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.77"
leptos = { version = "0.7.8", default-features = false, features = ["csr"] }
send_wrapper = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.77", features = ["console"] }
